ajuste de tamanho da capa prinpical

--- a/index.html
+++ b/index.html
@@ -26,13 +26,21 @@
             <img src="./imagem/logo.png" alt="Rancho Belle Vue">
         </a>
 
-        <!-- Botão WhatsApp -->
-        <a href="https://wa.me/SEUNUMERO" target="_blank" class="btn btn-outline-light btn-modern">WhatsApp</a>
+        <!-- Botões -->
+        <div>
+            <!-- Botão WhatsApp -->
+            <a href="https://wa.me/SEUNUMERO" target="_blank" class="btn btn-outline-light btn-whatsapp me-2">WhatsApp</a>
+
+            <!-- Botão Reserva via Airbnb -->
+            <a href="https://www.airbnb.com/yourlistinglink" target="_blank" class="btn btn-airbnb">Reservar no Airbnb</a>
+        </div>
     </div>
 </nav>
 
+
     <!-- Carousel -->
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" style="min-height: 400x;">
+
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -40,10 +48,10 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./imagem/interno1.JPG" class="d-block w-100" alt="Imagem 1">
+                <img src="./imagem/slide1.JPG" class="d-block w-100" alt="Imagem 1">
             </div>
             <div class="carousel-item">
-                <img src="./imagem//IMG_2177.JPG" class="d-block w-100" alt="Imagem 2">
+                <img src="./imagem/capa.jpg" class="d-block w-100" alt="Imagem 2">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
