--- a/index.html
+++ b/index.html
@@ -21,21 +21,27 @@
 <!-- Navbar -->
 <nav class="navbar navbar-dark fixed-top" style="background-color: rgba(156, 155, 127, 0.85);">
     <div class="container-fluid d-flex justify-content-between align-items-center">
-        <!-- Logo -->
-        <a class="navbar-brand" href="#">
-            <img src="./imagem/logo.png" alt="Rancho Belle Vue">
-        </a>
+        <!-- Logo e Botões -->
+        <div class="d-flex align-items-center">
+            <a class="navbar-brand me-3" href="#">
+                <img src="./imagem/logo.png" alt="Rancho Belle Vue">
+            </a>
+            <div class="d-flex d-md-none">
+                <!-- Botão WhatsApp -->
+                <a href="https://wa.me/SEUNUMERO" target="_blank" class="btn btn-outline-light btn-whatsapp me-2">WhatsApp</a>
+                <!-- Botão Reserva via Airbnb -->
+                <a href="https://www.airbnb.com/yourlistinglink" target="_blank" class="btn btn-airbnb">Reservar no Airbnb</a>
+            </div>
+        </div>
 
-        <!-- Botões -->
-        <div>
-            <!-- Botão WhatsApp -->
+        <!-- Botões (visíveis em telas maiores) -->
+        <div class="d-none d-md-block">
             <a href="https://wa.me/SEUNUMERO" target="_blank" class="btn btn-outline-light btn-whatsapp me-2">WhatsApp</a>
-
-            <!-- Botão Reserva via Airbnb -->
             <a href="https://www.airbnb.com/yourlistinglink" target="_blank" class="btn btn-airbnb">Reservar no Airbnb</a>
         </div>
     </div>
 </nav>
+
 
 
     <!-- Carousel -->
