--- a/index.html
+++ b/index.html
@@ -45,19 +45,26 @@
 
 
     <!-- Carousel -->
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" style="min-height: 400x;">
+    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" style="min-height: 300px;">
 
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./imagem/slide1.JPG" class="d-block w-100" alt="Imagem 1">
+                <img src="./imagem/carousel1.JPG" class="d-block w-100" alt="Imagem 1">
             </div>
             <div class="carousel-item">
-                <img src="./imagem/capa.jpg" class="d-block w-100" alt="Imagem 2">
+                <img src="./imagem/carousel2.JPG" class="d-block w-100" alt="Imagem 2">
+            </div>
+            <div class="carousel-item">
+                <img src="./imagem/carousel3.JPG" class="d-block w-100" alt="Imagem 2">
+            </div>
+            <div class="carousel-item">
+                <img src="./imagem/carousel4.JPG" class="d-block w-100" alt="Imagem 2">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
