mudança de lado do botao do whatsapp

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 <!-- Navbar -->
-<nav class="navbar navbar-dark fixed-top" style="background-color: rgba(156, 155, 127, 0.85);">
+<nav class="navbar navbar-dark fixed-top">
     <div class="container-fluid d-flex justify-content-center">
         <!-- Logo -->
         <a class="navbar-brand" href="#">
