--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 
 <!-- Bootstrap Icons -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css">
@@ -66,134 +68,141 @@
 <!-- Comodidades -->
 <section id="comodidades" class="py-5" style="background-color: #f8f9fa;">
     <div class="container text-center">
-        <h2 class="mb-4" style="color: #85927d; font-weight: 600;">Conforto de hotel 5 estrelas em uma Cabana com vista incrível</h2>
-        <p class="lead mb-5" style="color: #6c757d;">
-            Um projeto pensado nos mínimos detalhes para que você viva momentos inesquecíveis a dois ou em família.<br>
-            <strong>Serra Catarinense . Santa Catarina . Brasil</strong>
+        <h2 class="mb-4">
+            Uma cabana exclusiva, com uma vista deslumbrante para o nascer do sol.
+        </h2>
+        <p class="lead mb-5">
+            No Rancho Belle Vue, cada detalhe foi cuidadosamente planejado para oferecer conforto, tranquilidade e momentos de profunda conexão.<br>
+            <p class="lead mb-5">
+                No Rancho Belle Vue, cada detalhe foi cuidadosamente planejado para oferecer conforto, tranquilidade e momentos de profunda conexão.<br>
+                <strong class="localizacao">
+                    <i class="fas fa-map-marker-alt"></i> Litoral, Santa Catarina. Brasil
+                </strong>
+            </p>
+            
         </p>
-
-        <div id="carouselComodidades" class="carousel slide mb-5" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="./imagem/slide1.JPG" class="d-block w-100 carousel-img" alt="Imagem 1">
-                </div>
-                <div class="carousel-item">
-                    <img src="./imagem/slide2.JPG" class="d-block w-100 carousel-img" alt="Imagem 2">
-                </div>
-                <div class="carousel-item">
-                    <img src="./imagem/slide3.JPG" class="d-block w-100 carousel-img" alt="Imagem 3">
-                </div>
-                <div class="carousel-item">
-                    <img src="./imagem/slide4.JPG" class="d-block w-100 carousel-img" alt="Imagem 4">
-                </div>
-                <div class="carousel-item">
-                    <img src="./imagem/slide5.JPG" class="d-block w-100 carousel-img" alt="Imagem 5">
-                </div>
-                <div class="carousel-item">
-                    <img src="./imagem/slide6.JPG" class="d-block w-100 carousel-img" alt="Imagem 6">
-                </div>
-            </div>
-
-            <!-- Miniaturas abaixo do carrossel -->
-            <div class="carousel-thumbnails">
-                <img src="./imagem/slide1.JPG" data-bs-target="#carouselComodidades" data-bs-slide-to="0" class="active thumb-indicator" alt="Miniatura 1">
-                <img src="./imagem/slide2.JPG" data-bs-target="#carouselComodidades" data-bs-slide-to="1" class="thumb-indicator" alt="Miniatura 2">
-                <img src="./imagem/slide3.JPG" data-bs-target="#carouselComodidades" data-bs-slide-to="2" class="thumb-indicator" alt="Miniatura 3">
-                <img src="./imagem/slide4.JPG" data-bs-target="#carouselComodidades" data-bs-slide-to="3" class="thumb-indicator" alt="Miniatura 4">
-                <img src="./imagem/slide5.JPG" data-bs-target="#carouselComodidades" data-bs-slide-to="4" class="thumb-indicator" alt="Miniatura 5">
-                <img src="./imagem/slide6.JPG" data-bs-target="#carouselComodidades" data-bs-slide-to="5" class="thumb-indicator" alt="Miniatura 6">
-            </div>
-        </div>
     </div>
 </section>
 
 
 
+<div id="carouselComodidades" class="carousel slide mb-5" data-bs-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="./imagem/slide1.JPG" class="d-block w-100 carousel-img" alt="Imagem 1">
+        </div>
+        <div class="carousel-item">
+            <img src="./imagem/slide2.JPG" class="d-block w-100 carousel-img" alt="Imagem 2">
+        </div>
+        <div class="carousel-item">
+            <img src="./imagem/slide3.JPG" class="d-block w-100 carousel-img" alt="Imagem 3">
+        </div>
+        <div class="carousel-item">
+            <img src="./imagem/slide4.JPG" class="d-block w-100 carousel-img" alt="Imagem 4">
+        </div>
+        <div class="carousel-item">
+            <img src="./imagem/slide5.JPG" class="d-block w-100 carousel-img" alt="Imagem 5">
+        </div>
+        <div class="carousel-item">
+            <img src="./imagem/slide6.JPG" class="d-block w-100 carousel-img" alt="Imagem 6">
+        </div>
+    </div>
+
+    <!-- Miniaturas acima do carrossel -->
+    <div class="carousel-thumbnails">
+        <img src="./imagem/slide1.JPG" data-bs-target="#carouselComodidades" data-bs-slide-to="0" class="active thumb-indicator" alt="Miniatura 1">
+        <img src="./imagem/slide2.JPG" data-bs-target="#carouselComodidades" data-bs-slide-to="1" class="thumb-indicator" alt="Miniatura 2">
+        <img src="./imagem/slide3.JPG" data-bs-target="#carouselComodidades" data-bs-slide-to="2" class="thumb-indicator" alt="Miniatura 3">
+        <img src="./imagem/slide4.JPG" data-bs-target="#carouselComodidades" data-bs-slide-to="3" class="thumb-indicator" alt="Miniatura 4">
+        <img src="./imagem/slide5.JPG" data-bs-target="#carouselComodidades" data-bs-slide-to="4" class="thumb-indicator" alt="Miniatura 5">
+        <img src="./imagem/slide6.JPG" data-bs-target="#carouselComodidades" data-bs-slide-to="5" class="thumb-indicator" alt="Miniatura 6">
+    </div>
+</div>
+
+
+
 <!-- Comodidades -->
-<section id="comodidades" class="py-5" style="background-color: #85927d;">
+<section id="comodidades" class="py-5" style="background-color: rgba(133, 146, 125, 0.1);">
     <div class="container text-center">
-        <h3 class="mb-4" style="color: #ffffff; font-weight: 600;">
-            Confira algumas das comodidades que você terá acesso na Cabana
+        <h3 class="mb-4" style="color: #6c7b58; font-weight: 600;">
+            Explore todas as experiências exclusivas que a cabana tem a oferecer
         </h3>
-        <p class="mb-4" style="color: #d3c5b5;">
-            Disponibilizamos todos os itens necessários para que você tenha mais conforto e liberdade durante a sua estadia.
+        <p class="mb-4" style="color: #8b9e7f;">
+            Para sua comodidade, oferecemos todos os itens essenciais para que você desfrute de uma estadia confortável e sem limitações.
         </p>
 
         <div class="row g-4">
             <div class="col-md-4 col-sm-6">
                 <div>
-                    <i class="bi bi-water text-light fs-1"></i>
-                    <p style="color: #f8f9fa;">Banheira de hidromassagem para duas pessoas</p>
+                    <i class="bi bi-water text-light fs-1 icon-style"></i>
+                    <p style="color: #6c7b58; margin-top: 10px;">Banheira de hidromassagem
+                        com led de cromoterapia </p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
                 <div>
-                    <i class="bi bi-wifi text-light fs-1"></i>
-                    <p style="color: #f8f9fa;">Internet de fibra com velocidade de <strong>500MB/s</strong></p>
+                    <i class="bi bi-wifi text-light fs-1 icon-style"></i>
+                    <p style="color: #6c7b58; margin-top: 10px;">Internet de via rádio  com velocidade de<strong>500MB/s</strong></p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
                 <div>
-                    <i class="bi bi-snow text-light fs-1"></i>
-                    <p style="color: #f8f9fa;">Lareira e ar condicionado quente/frio</p>
+                    <i class="bi bi-snow text-light fs-1 icon-style"></i>
+                    <p style="color: #6c7b58; margin-top: 10px;">Lareira e ar condicionado quente/frio</p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
-                <div>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="white" class="bi bi-bed-fill" viewBox="0 0 16 16">
-                        <path d="M2 1a1 1 0 0 0-1 1v11h1v1h1v-1h10v1h1v-1h1V2a1 1 0 0 0-1-1H2Zm1 2a1 1 0 0 0-1 1v6h12V4a1 1 0 0 0-1-1H3Zm3 1h4a2 2 0 0 1 2 2v3H4V6a2 2 0 0 1 2-2Z"/>
-                      </svg>
-                    <p style="color: #f8f9fa;">Cama king-size no mezanino e sofá cama na sala</p>
+                    <div>
+                        <i class="bi bi-house-door text-light fs-1 icon-style"></i>
+                        <p style="color: #6c7b58; margin-top: 10px;">Cama gringa na suíte e sofá cama na sala</p>
+                    </div>
                 </div>
                 
-            </div>
             <div class="col-md-4 col-sm-6">
                 <div>
-                    <i class="bi bi-droplet text-light fs-1"></i>
-                    <p style="color: #f8f9fa;">2 Duchas pressurizadas e aquecimento a gás em todas as torneiras e duchas</p>
+                    <i class="bi bi-person text-light fs-1 icon-style"></i>
+                    <p style="color: #6c7b58; margin-top: 10px;">Roupas de cama, banho, roupões, pantufas e chinelos </p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
                 <div>
-                    <i class="bi bi-person text-light fs-1"></i>
-
-                    <p style="color: #f8f9fa;">Roupas de cama, banho e roupões</p>
+                    <i class="bi bi-gift text-light fs-1 icon-style"></i>
+                    <p style="color: #6c7b58; margin-top: 10px;">Espuma de banho</p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
                 <div>
-                    <i class="bi bi-gift text-light fs-1"></i>
-                    <p style="color: #f8f9fa;">Amenities, sais de banho e banho de espuma da linha luxo Florence Blanc</p>
+                    <i class="bi bi-cup-straw text-light fs-1 icon-style"></i>
+                    <p style="color: #6c7b58; margin-top: 10px;"> Cooktop e forno à gás,microondas, refrigerador com freezer e adega de vinho</p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
                 <div>
-                    <i class="bi bi-cup-straw text-light fs-1"></i>
-                    <p style="color: #f8f9fa;">Cooktop e forno à gás, microondas, refrigerador com freezer e máquina lava e seca</p>
+                    <i class="bi bi-tv text-light fs-1 icon-style"></i>
+                    <p style="color: #6c7b58; margin-top: 10px;">1 smartTV 55" na sala e l smartTV 32" no quarto</p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
                 <div>
-                    <i class="bi bi-tv text-light fs-1"></i>
-                    <p style="color: #f8f9fa;">1 smartTV 55" na sala e 1 smartTV 32" no quarto</p>
+                    <i class="bi bi-brightness-alt-high text-light fs-1 icon-style"></i>
+                    <p style="color: #6c7b58; margin-top: 10px;">Iluminação da suíte e persianas automatizadas via Alexa</p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
                 <div>
-                    <i class="bi bi-brightness-alt-high text-light fs-1"></i>
-                    <p style="color: #f8f9fa;">Iluminação e persianas automatizadas via Alexa</p>
+                    <i class="bi bi-speaker text-light fs-1 icon-style"></i>
+                    <p style="color: #6c7b58; margin-top: 10px;">Sistema de som via Alexa na sala e quarto</p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
                 <div>
-                    <i class="bi bi-speaker text-light fs-1"></i>
-                    <p style="color: #f8f9fa;">Sistema de som via Alexa na sala e quarto</p>
+                    <i class="bi bi-cup-straw text-light fs-1 icon-style"></i>
+                    <p style="color: #6c7b58; margin-top: 10px;">Jogo de jantar, talheres, copos, taças de cristais, panelas e utensílios</p>
                 </div>
             </div>
         </div>
     </div>
 </section>
-
 <section id="experiencias-premium" class="py-5" style="background-color: #f8f9fa;">
     <div class="container">
         <div class="row align-items-center">
@@ -204,8 +213,8 @@
 
             <!-- Texto à direita -->
             <div class="col-md-6">
-                <h2 class="mb-4" style="color: #85927d; font-weight: 600;">Experiências Premium</h2>
-                <p class="lead mb-4" style="color: #6c757d;">Além dos serviços inclusos na hospedagem, você poderá contratar outros serviços para deixar sua estadia ainda mais incrível.</p>
+                <h2 class="mb-4" style="color: #85927d; font-weight: 600;">Experiência alto padrão </h2>
+                <p class="lead mb-4" style="color: #6c757d;">Além dos serviços já inclusos na hospedagem, oferecemos opções adicionais para tornar sua estadia ainda mais especial e personalizada.</p>
 
                 <ul class="list-unstyled" style="color: #6c757d;">
                     <li class="d-flex align-items-center mb-3">
@@ -226,15 +235,27 @@
                     </li>
                     <li class="d-flex align-items-center mb-3">
                         <i class="bi bi-cup text-success fs-3 me-3"></i>
-                        <strong>Fondue de carnes e queijos</strong>
+                        <strong>Fondue de doce</strong>
                     </li>
                     <li class="d-flex align-items-center mb-3">
-                        <i class="bi bi-horse text-success fs-3 me-3"></i>
+                        <i class="bi bi-person-bounding-box text-success fs-3 me-3"></i>
                         <strong>Passeio à cavalo</strong>
+                    </li>
+                    <li class="d-flex align-items-center mb-3">
+                        <i class="bi bi-balloon text-success fs-3 me-3"></i>
+                        <strong>Balonismo</strong>
+                    </li>
+                    <li class="d-flex align-items-center mb-3">
+                        <i class="bi bi-airplane-engines text-success fs-3 me-3"></i>
+                        <strong>Parapente</strong>
+                    </li>
+                    <li class="d-flex align-items-center mb-3">
+                        <i class="bi bi-tree text-success fs-3 me-3"></i>
+                        <strong>Arvorismo</strong>
                     </li>
                 </ul>
 
-                <p class="mt-4" style="color: #6c757d;"><strong>* Consulte os valores das experiências premium no agendamento da sua hospedagem.</strong></p>
+                <p class="mt-4" style="color: #6c757d;"><strong>* Consulte os valores das experiências com nossos parceiros no momento do agendamento .</strong></p>
                 <p style="color: #6c757d;"><strong>* Alguns serviços precisam de agendamento com no mínimo 7 dias de antecedência.</strong></p>
             </div>
         </div>
