correçao de valores e layout dos cards de preços

--- a/index.html
+++ b/index.html
@@ -265,46 +265,37 @@
         
 <section id="precos" class="py-5" style="background-color: #f8f9fa;">
     <div class="container">
-        <h2 class="text-center mb-5" style="color: #4b3b2b; font-weight: 600;">Preços e Condições</h2>
+        <h2 class="text-center mb-5" style="color: #3b5a4f; font-weight: 600;">Preços e Condições</h2>
 
         <div class="row">
             <!-- Card: Dia de Semana -->
             <div class="col-md-4 mb-4">
-                <div class="card shadow-lg border-0 h-100">
+                <div class="card shadow-lg border-0 h-100" style="border-radius: 15px; overflow: hidden; background-color: #fff;">
                     <div class="card-body">
                         <h5 class="card-title text-success d-flex align-items-center">
-                            <i class="bi bi-calendar-week me-2"></i> Dia de Semana
-                        </h5>
-                        <p class="card-text">Hospedagens com check-in de domingo à quinta-feira.</p>
-                        <h6 class="text-muted">Janeiro à Março 2025</h6>
-                        <p><strong>R$647,00</strong> - Diária p/ 2 pessoas</p>
-                        <h6 class="text-muted">Abril à Dezembro 2025</h6>
-                        <p><strong>R$947,00</strong> - Diária p/ 2 pessoas</p>
-                        <a href="https://wa.me/48996819403" class="btn btn-primary">RESERVAR AGORA</a>
+                            <i class="bi bi-calendar-week me-2"></i> Dia de Semana</h5>
+                        <p><strong>R$690,00</strong> - Diária p/ 2 pessoas</p>
+                        <a href="https://wa.me/48996777239" class="btn btn-success w-100">RESERVAR AGORA</a>
                     </div>
                 </div>
             </div>
 
             <!-- Card: Final de Semana -->
             <div class="col-md-4 mb-4">
-                <div class="card shadow-lg border-0 h-100">
+                <div class="card shadow-lg border-0 h-100" style="border-radius: 15px; overflow: hidden; background-color: #fff;">
                     <div class="card-body">
                         <h5 class="card-title text-success d-flex align-items-center">
                             <i class="bi bi-calendar-check me-2"></i> Final de Semana
                         </h5>
-                        <p class="card-text">Hospedagens com check-in sexta, sábado e feriados.</p>
-                        <h6 class="text-muted">Janeiro à Março 2025</h6>
-                        <p><strong>R$897,00</strong> - Diária p/ 2 pessoas</p>
-                        <h6 class="text-muted">Abril à Dezembro 2025</h6>
-                        <p><strong>R$1.197,00</strong> - Diária p/ 2 pessoas</p>
-                        <a href="https://wa.me/48996819403" class="btn btn-primary">RESERVAR AGORA</a>
+                        <p><strong>R$790,00</strong> - Diária p/ 2 pessoas</p>
+                        <a href="https://wa.me/48996777239" class="btn btn-success w-100">RESERVAR AGORA</a>
                     </div>
                 </div>
             </div>
 
             <!-- Card: Adicionais -->
             <div class="col-md-4 mb-4">
-                <div class="card shadow-lg border-0 h-100">
+                <div class="card shadow-lg border-0 h-100" style="border-radius: 15px; overflow: hidden; background-color: #fff;">
                     <div class="card-body">
                         <h5 class="card-title text-success d-flex align-items-center">
                             <i class="bi bi-plus-circle me-2"></i> Adicionais
@@ -316,13 +307,14 @@
                             <li><i class="bi bi-paw me-2 text-success"></i><strong>PET DE PEQUENO E MÉDIO PORTE:</strong> R$150,00 por pet</li>
                         </ul>
                         <p><strong>HOSPEDAGEM MÍNIMA: 2 NOITES</strong></p>
-                        <a href="https://wa.me/48996819403" class="btn btn-primary">CONSULTE DISPONIBILIDADE</a>
+                        <a href="https://wa.me/48996777239" class="btn btn-success w-100">CONSULTE DISPONIBILIDADE</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
+
 
                 <!-- Informações Adicionais -->
                 <div class="text-center mt-5">
@@ -515,7 +507,7 @@
         
 
 <!-- Botão do WhatsApp -->
-<a href="https://wa.me/+5548998550384?text=Oi,%20gostaria%20de%20agendar%20uma%20avaliação." target="_blank" class="whatsapp-button">
+<a href="https://wa.me/+5548996777239?text=Oi,%20gostaria%20de%20agendar%20uma%20avaliação." target="_blank" class="whatsapp-button">
     <i class="bi bi-whatsapp"></i>
 </a>
 
@@ -578,7 +570,7 @@
         <div class="row">
             <div class="col-12">
                 <p class="text-center mt-4">A experiência no centro da sua hospedagem. Um local pensado para criar recordações inesquecíveis.</p>
-                <a href="https://wa.me/48996819403" class="btn btn-warning">Chamar pelo WhatsApp</a>
+                <a href="https://wa.me/48996777239" class="btn btn-warning">Chamar pelo WhatsApp</a>
             </div>
         </div>
 
