correçao de mensagem quando apertado o botao de informaçoes do whatsapp

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                         <h5 class="card-title text-success d-flex align-items-center">
                             <i class="bi bi-calendar-week me-2"></i> Dia de Semana</h5>
                         <p><strong>R$690,00</strong> - Diária p/ 2 pessoas</p>
-                        <a href="https://wa.me/48996777239" class="btn btn-success w-100">RESERVAR AGORA</a>
+                        <a href="https://wa.me/48996777239?text=Olá,%20estou%20interessado%20em%20uma%20hospedagem.%20Poderia%20me%20passar%20mais%20informações?" class="btn btn-success w-100">RESERVAR AGORA</a>
                     </div>
                 </div>
             </div>
@@ -287,7 +287,7 @@
                             <i class="bi bi-calendar-check me-2"></i> Final de Semana
                         </h5>
                         <p><strong>R$790,00</strong> - Diária p/ 2 pessoas</p>
-                        <a href="https://wa.me/48996777239" class="btn btn-success w-100">RESERVAR AGORA</a>
+                        <a href="https://wa.me/48996777239?text=Olá,%20estou%20interessado%20em%20uma%20hospedagem.%20Poderia%20me%20passar%20mais%20informações?" class="btn btn-success w-100">RESERVAR AGORA</a>
                     </div>
                 </div>
             </div>
@@ -306,7 +306,7 @@
                             <li><i class="bi bi-paw me-2 text-success"></i><strong>PET DE PEQUENO E MÉDIO PORTE:</strong> R$150,00 por pet</li>
                         </ul>
                         <p><strong>HOSPEDAGEM MÍNIMA: 2 NOITES</strong></p>
-                        <a href="https://wa.me/48996777239" class="btn btn-success w-100">CONSULTE DISPONIBILIDADE</a>
+                        <a href="https://wa.me/48996777239?text=Olá,%20estou%20interessado%20em%20uma%20hospedagem.%20Poderia%20me%20passar%20mais%20informações?" class="btn btn-success w-100">CONSULTE DISPONIBILIDADE</a>
                     </div>
                 </div>
             </div>
@@ -317,7 +317,7 @@
 <!-- Informações Adicionais -->
 <div class="text-center mt-5">
     <h3 style="color: #85927d; font-size: 2rem;">Agendamento <i class="bi bi-calendar-check" style="color: #85927d;"></i></h3>
-    <p>Consulte a disponibilidade da Cabana pelo nosso WhatsApp oficial clicando <a href="https://wa.me/48996777239">aqui</a>.</p>
+    <p>Consulte a disponibilidade da Cabana pelo nosso WhatsApp oficial clicando <a href="https://wa.me/48996777239?text=Olá,%20estou%20interessado%20em%20uma%20hospedagem.%20Poderia%20me%20passar%20mais%20informações?">aqui</a>.</p>
 
     <h3 style="color: #85927d; font-size: 2rem;">Pagamento <i class="bi bi-credit-card" style="color: #85927d;"></i></h3>
     <p>Bandeiras de cartões. Pague sua reserva em até 12x no cartão de crédito, pelo Mercado Pago.</p>
@@ -508,7 +508,7 @@ Cabana.
         
 
 <!-- Botão do WhatsApp -->
-<a href="https://wa.me/+5548996777239?text=Oi,%20gostaria%20de%20agendar%20uma%20avaliação." target="_blank" class="whatsapp-button">
+<a href="https://wa.me/48996777239?text=Olá,%20estou%20interessado%20em%20uma%20hospedagem.%20Poderia%20me%20passar%20mais%20informações?" target="_blank" class="whatsapp-button">
     <i class="bi bi-whatsapp"></i>
 </a>
 
@@ -570,7 +570,7 @@ Cabana.
             <div class="col-12">
                 <p class="text-center mt-4">A experiência no centro da sua hospedagem.
                     Um local totalmente pensado para você ter recordações inesquecíveis</p>
-                <a href="https://wa.me/48996777239" class="btn btn-warning">Chamar pelo WhatsApp</a>
+                <a href="https://wa.me/48996777239?text=Olá,%20estou%20interessado%20em%20uma%20hospedagem.%20Poderia%20me%20passar%20mais%20informações?" class="btn btn-warning">Chamar pelo WhatsApp</a>
             </div>
         </div>
 
