correçao da transparencia dos itens

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
             <!-- Texto à direita -->
             <div class="col-md-6">
-                <h2 class="mb-4" style="color: #85927d; font-weight: 600;">Experiência alto padrão </h2>
+                <h2 class="mb-4" style="color: #6c7b58; font-weight: 600;">Experiência alto padrão </h2>
                 <p class="lead mb-4" style="color: #6c757d;">Além dos serviços já inclusos na hospedagem, oferecemos opções adicionais para tornar sua estadia ainda mais especial e personalizada.</p>
 
                 <ul class="list-unstyled" style="color: #6c757d;">
@@ -289,25 +289,6 @@
                     </div>
                 </div>
             </div>
-
-            <!-- Card: Adicionais -->
-            <div class="col-md-4 mb-4">
-                <div class="card shadow-lg border-0 h-100" style="border-radius: 20px; overflow: hidden; background-color: #fff;">
-                    <div class="card-body">
-                        <h5 class="card-title text-success d-flex align-items-center">
-                            <i class="bi bi-plus-circle me-2"></i> Adicionais
-                        </h5>
-                        <p class="card-text">Informe os adicionais no fechamento da sua hospedagem.</p>
-                        <ul class="list-unstyled">
-                            <li><i class="bi bi-person-plus me-2 text-success"></i><strong>HÓSPEDE ADICIONAL:</strong> R$100,00 por diária</li>
-                            <li><i class="bi bi-child me-2 text-success"></i><strong>CRIANÇA ATÉ 5 ANOS:</strong> Não pagam</li>
-                            <li><i class="bi bi-paw me-2 text-success"></i><strong>PET DE PEQUENO E MÉDIO PORTE:</strong> R$150,00 por pet</li>
-                        </ul>
-                        <p><strong>HOSPEDAGEM MÍNIMA: 2 NOITES</strong></p>
-                        <a href="https://wa.me/48996777239?text=Olá,%20estou%20interessado%20em%20uma%20hospedagem.%20Poderia%20me%20passar%20mais%20informações?" class="btn btn-success w-100">CONSULTE DISPONIBILIDADE</a>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
 </section>
@@ -340,7 +321,7 @@
                         <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#faqAccordion">
                             <div class="accordion-body">
                                 Nossa Cabana fica na cidade de Santo Amaro da imperatriz no
-                                Litoral de Catarinense, a 30km de Florianópolis. A Cabana está localizada a apenas 7 do centro da cidade.
+                                Litoral de Catarinense, a 30km de Florianópolis. A Cabana está localizada a apenas 7km do centro da cidade.
                             </div>
                         </div>
                     </div>
@@ -354,7 +335,7 @@
                         </h2>
                         <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#faqAccordion">
                             <div class="accordion-body">
-                                O check-in é realizado através do WhatsApp com um link enviado antes da data da sua estadia. O horário de check-in é a partir das 15:00h.
+                                Fique tranquilo, o check-in é realizado sem a nossa presença, dessa forma você tem mais privacidade e flexbilidade no horário de chegada. No dia do seu check-in enviaremos todas as informações de localização e instruções da Cabana. O check-in fica liberado a parti das 15h e o check-out é realizado até as Ilh da manhã.
                             </div>
                         </div>
                     </div>
@@ -481,7 +462,7 @@ Cabana.
                         </h2>
                         <div id="collapseEleven" class="accordion-collapse collapse" aria-labelledby="headingEleven" data-bs-parent="#faqAccordion">
                             <div class="accordion-body">
-                                O reagendamento pode ser feito com até 7 dias de antecedência, conforme disponibilidade.
+                                O reagendamento pode ser feito com até 20 dias de antecedência, conforme disponibilidade.
                             </div>
                         </div>
                     </div>
