correçao de forma de pagamento

--- a/index.html
+++ b/index.html
@@ -299,7 +299,8 @@
     <p>Consulte a disponibilidade da Cabana pelo nosso WhatsApp oficial clicando <a href="https://wa.me/48996777239?text=Olá,%20estou%20interessado%20em%20uma%20hospedagem.%20Poderia%20me%20passar%20mais%20informações?">aqui</a>.</p>
 
     <h3 style="color: #85927d; font-size: 2rem;">Pagamento <i class="bi bi-credit-card" style="color: #85927d;"></i></h3>
-    <p>Bandeiras de cartões. Pague sua reserva em até 12x no cartão de crédito, pelo Mercado Pago.</p>
+<p>Pagamento mediante 50% na efetivação da reserva e 50% até 7 dias antes do check-in. Parcelamento disponível no cartão em até 12x com acréscimo, via Mercado Pago.</p>
+
 
     <h3 style="color: #85927d; font-size: 2rem;">Horários <i class="bi bi-clock" style="color: #85927d;"></i></h3>
     <p><strong>Check-in:</strong> a partir das 15:00h</p>
