correçao da descriçao do icone alexa

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <div class="col-md-4 col-sm-6">
                 <div>
                     <i class="bi bi-speaker text-light fs-1 icon-style"></i>
-                    <p style="color: #030303; margin-top: 10px;">Sistema de som via Alexa na sala e quarto</p>
+                    <p style="color: #030303; margin-top: 10px;">Sistema de som via Alexa no quarto</p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
