inseri a logo em cima do mapa de como chegar

--- a/index.html
+++ b/index.html
@@ -492,7 +492,9 @@
 
 <!-- Footer -->
 <footer class="text-white text-center py-5" style="background-color: #414b32;">
-
+    <a class="navbar-brand" href="#">
+        <img src="./imagem/logo.png" alt="Rancho Belle Vue">
+    </a>
     <!-- Google Maps e Botão de Localização -->
     <div class="row mb-4">
         <div class="col-12">
