alteraçao de cor do icones

--- a/index.html
+++ b/index.html
@@ -118,7 +118,6 @@
 </div>
 
 
-<!-- Comodidades -->
 <section id="comodidades" class="py-5" style="background-color: rgba(133, 146, 125, 0.1);">
     <div class="container text-center">
         <h3 class="mb-4" style="color: #6c7b58; font-weight: 600;">
@@ -131,69 +130,67 @@
         <div class="row g-4">
             <div class="col-md-4 col-sm-6">
                 <div>
-                    <i class="bi bi-water text-light fs-1 icon-style"></i>
-                    <p style="color: #030303; margin-top: 10px;">Banheira de hidromassagem
-                        com led de cromoterapia </p>
+                    <i class="bi bi-water fs-1 icon-style"></i>
+                    <p style="color: #030303; margin-top: 10px;">Banheira de hidromassagem com led de cromoterapia</p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
                 <div>
-                    <i class="bi bi-wifi text-light fs-1 icon-style"></i>
-                    <p style="color: #030303; margin-top: 10px;">Internet de via rádio  com velocidade de<strong>500MB/s</strong></p>
+                    <i class="bi bi-wifi fs-1 icon-style"></i>
+                    <p style="color: #030303; margin-top: 10px;">Internet de via rádio com velocidade de<strong>500MB/s</strong></p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
                 <div>
-                    <i class="bi bi-snow text-light fs-1 icon-style"></i>
+                    <i class="bi bi-snow fs-1 icon-style"></i>
                     <p style="color: #030303; margin-top: 10px;">Lareira e ar condicionado quente/frio</p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
-                    <div>
-                        <i class="bi bi-house-door text-light fs-1 icon-style"></i>
-                        <p style="color: #030303; margin-top: 10px;">Cama gringa na suíte e sofá cama na sala</p>
-                    </div>
-                </div>
-                
-            <div class="col-md-4 col-sm-6">
                 <div>
-                    <i class="bi bi-person text-light fs-1 icon-style"></i>
-                    <p style="color: #030303; margin-top: 10px;">Roupas de cama, banho, roupões, pantufas e chinelos </p>
+                    <i class="bi bi-house-door fs-1 icon-style"></i>
+                    <p style="color: #030303; margin-top: 10px;">Cama gringa na suíte e sofá cama na sala</p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
                 <div>
-                    <i class="bi bi-gift text-light fs-1 icon-style"></i>
+                    <i class="bi bi-person fs-1 icon-style"></i>
+                    <p style="color: #030303; margin-top: 10px;">Roupas de cama, banho, roupões, pantufas e chinelos</p>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <div>
+                    <i class="bi bi-gift fs-1 icon-style"></i>
                     <p style="color: #030303; margin-top: 10px;">Espuma de banho</p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
                 <div>
-                    <i class="bi bi-cup-straw text-light fs-1 icon-style"></i>
-                    <p style="color: #030303; margin-top: 10px;"> Cooktop e forno à gás,microondas, refrigerador com freezer e adega de vinho</p>
+                    <i class="bi bi-cup-straw fs-1 icon-style"></i>
+                    <p style="color: #030303; margin-top: 10px;">Cooktop e forno à gás, microondas, refrigerador com freezer e adega de vinho</p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
                 <div>
-                    <i class="bi bi-tv text-light fs-1 icon-style"></i>
-                    <p style="color: #030303; margin-top: 10px;">1 smartTV 55" na sala e l smartTV 32" no quarto</p>
+                    <i class="bi bi-tv fs-1 icon-style"></i>
+                    <p style="color: #030303; margin-top: 10px;">1 smartTV 55" na sala e 1 smartTV 32" no quarto</p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
                 <div>
-                    <i class="bi bi-brightness-alt-high text-light fs-1 icon-style"></i>
+                    <i class="bi bi-brightness-alt-high fs-1 icon-style"></i>
                     <p style="color: #030303; margin-top: 10px;">Iluminação da suíte e persianas automatizadas via Alexa</p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
                 <div>
-                    <i class="bi bi-speaker text-light fs-1 icon-style"></i>
+                    <i class="bi bi-speaker fs-1 icon-style"></i>
                     <p style="color: #030303; margin-top: 10px;">Sistema de som via Alexa no quarto</p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
                 <div>
-                    <i class="bi bi-cup-straw text-light fs-1 icon-style"></i>
+                    <i class="bi bi-cup-straw fs-1 icon-style"></i>
                     <p style="color: #030303; margin-top: 10px;">Jogo de jantar, talheres, copos, taças de cristais, panelas e utensílios</p>
                 </div>
             </div>
@@ -208,7 +205,6 @@
                 <img src="./imagem/premium.JPG" class="img-fluid rounded shadow-lg" alt="Experiências Premium">
             </div>
 
-            <!-- Texto à direita -->
             <!-- Texto à direita -->
 <div class="col-md-6">
     <h2 class="mb-4" style="color: #6c7b58; font-weight: 600;">Experiência alto padrão</h2>
@@ -233,7 +229,7 @@
         </li>
         <li class="d-flex align-items-center mb-3">
             <i class="bi bi-cup fs-3 me-3" style="color: #6c7b58;"></i>
-            <strong>Fondue de doce</strong>
+            <strong>Fondue doce</strong>
         </li>
         <li class="d-flex align-items-center mb-3">
             <i class="bi bi-person-bounding-box fs-3 me-3" style="color: #6c7b58;"></i>
