criado espaço emtre texto e localizaçao

--- a/index.html
+++ b/index.html
@@ -69,10 +69,11 @@
 <section id="comodidades" class="py-5" style="background-color: #f8f9fa;">
     <div class="container text-center">
         <h2 class="mb-4">
-            Uma cabana exclusiva, com uma vista deslumbrante para o nascer do sol.
+            Uma cabana exclusiva, com uma vista deslumbrante para o nascer do&nbsp;sol.
         </h2>
+        
         <p class="lead mb-5">
-            No Rancho Belle Vue, cada detalhe foi cuidadosamente planejado para oferecer conforto, tranquilidade e momentos de profunda conexão.<br>
+            No Rancho Belle Vue, cada detalhe foi cuidadosamente planejado para oferecer conforto, tranquilidade e momentos de profunda conexão.<br><br><br>
                 <strong class="localizacao">
                     <i class="fas fa-map-marker-alt"></i> Litoral, Santa Catarina. Brasil
                 </strong>
