correçao da cor de localizaçao

--- a/index.html
+++ b/index.html
@@ -213,39 +213,39 @@
 
     <ul class="list-unstyled" style="color: #030303;">
         <li class="d-flex align-items-center mb-3">
-            <i class="bi bi-cup-straw fs-3 me-3" style="color: #6c7b58;"></i>
+            <i class="bi bi-cup-straw fs-3 me-3" style="color: #4a5a35;"></i>
             <strong>Box de café da manhã</strong>
         </li>
         <li class="d-flex align-items-center mb-3">
-            <i class="bi bi-person-check fs-3 me-3" style="color: #6c7b58;"></i>
+            <i class="bi bi-person-check fs-3 me-3" style="color: #4a5a35;"></i>
             <strong>Tábua de frios</strong>
         </li>
         <li class="d-flex align-items-center mb-3">
-            <i class="bi bi-gift fs-3 me-3" style="color: #6c7b58;"></i>
+            <i class="bi bi-gift fs-3 me-3" style="color: #4a5a35;"></i>
             <strong>Pedido de casamento</strong>
         </li>
         <li class="d-flex align-items-center mb-3">
-            <i class="bi bi-heart fs-3 me-3" style="color: #6c7b58;"></i>
+            <i class="bi bi-heart fs-3 me-3" style="color: #4a5a35;"></i>
             <strong>Estadia romântica</strong>
         </li>
         <li class="d-flex align-items-center mb-3">
-            <i class="bi bi-cup fs-3 me-3" style="color: #6c7b58;"></i>
+            <i class="bi bi-cup fs-3 me-3" style="color: #4a5a35;"></i>
             <strong>Fondue doce</strong>
         </li>
         <li class="d-flex align-items-center mb-3">
-            <i class="bi bi-person-bounding-box fs-3 me-3" style="color: #6c7b58;"></i>
+            <i class="bi bi-person-bounding-box fs-3 me-3" style="color: #4a5a35;"></i>
             <strong>Passeio à cavalo</strong>
         </li>
         <li class="d-flex align-items-center mb-3">
-            <i class="bi bi-balloon fs-3 me-3" style="color: #6c7b58;"></i>
+            <i class="bi bi-balloon fs-3 me-3" style="color: #4a5a35;"></i>
             <strong>Balonismo</strong>
         </li>
         <li class="d-flex align-items-center mb-3">
-            <i class="bi bi-airplane-engines fs-3 me-3" style="color: #6c7b58;"></i>
+            <i class="bi bi-airplane-engines fs-3 me-3" style="color: #4a5a35;"></i>
             <strong>Parapente</strong>
         </li>
         <li class="d-flex align-items-center mb-3">
-            <i class="bi bi-tree fs-3 me-3" style="color: #6c7b58;"></i>
+            <i class="bi bi-tree fs-3 me-3" style="color: #4a5a35;"></i>
             <strong>Arvorismo</strong>
         </li>
     </ul>
