--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
             <!-- Informações de contato -->
             <div class="col-md-4 mb-4">
                 <h5 class="text-uppercase"><i class="bi bi-geo-alt-fill me-2"></i> Contato</h5>
-                <p>EVarginha-morro dos Petry, S/N</p>
+                <p>Varginha-morro dos Petry, S/N</p>
                 <p>Santo Amaro da Imperatriz – SC, Brasil</p>
                 <p><i class="bi bi-telephone-fill me-2"></i> +55 48 99677-7239</p>
                 <p><i class="bi bi-envelope-fill me-2"></i><a href="mailto:ranchobellevue@gmail.com" class="text-light">ranchobellevue@gmail.com</a></p>
@@ -545,7 +545,7 @@
 
         <div class="row">
             <div class="col-12">
-                <p class="text-center mt-4" style="color: #f8f9fa;">A experiência no centro da sua hospedagem.
+                <p class="text-center mt-4" style="color: #f8f9fa;">
                     Um local totalmente pensado para você ter recordações inesquecíveis</p>
                 <a href="https://wa.me/48996777239?text=Olá,%20estou%20interessado%20em%20uma%20hospedagem.%20Poderia%20me%20passar%20mais%20informações?" class="btn btn-warning">Chamar pelo WhatsApp</a>
             </div>
