--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
     
     <!-- Footer Bottom -->
     <div class="footer-bottom py-3" style="background-color: #353d29;">
-        <p class="mb-0" style="color: #f8f9fa;">Desenvolvido por <a href="https://pauloamancio.com.br" target="_blank" style="color: #f8f9fa;">Paulo Amancio</a></p>
+        <p class="mb-0" style="color: #f8f9fa;">Desenvolvido por <a href="https://pauloamancio.com.br" target="_blank" style="color: #e1c16e;">Paulo Amancio</a></p>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </footer>
