--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"></button>
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -52,6 +53,9 @@
             </div>
             <div class="carousel-item">
                 <img src="./imagem/carousel4.JPG" class="d-block w-100" alt="Imagem 2">
+            </div>
+            <div class="carousel-item">
+                <img src="./imagem/carousel5.JPG" class="d-block w-100" alt="Imagem 2">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -69,7 +73,7 @@
 <section id="comodidades" class="py-5" style="background-color: #f8f9fa;">
     <div class="container text-center">
         <h2 class="mb-4">
-            Uma cabana exclusiva, com uma vista deslumbrante para o nascer do&nbsp;sol.
+            Uma cabana exclusiva com uma vista deslumbrante para o nascer do&nbsp;sol
         </h2>
         
         <p class="lead mb-5">
@@ -138,7 +142,7 @@
             <div class="col-md-4 col-sm-6">
                 <div>
                     <i class="bi bi-wifi fs-1 icon-style"></i>
-                    <p style="color: #030303; margin-top: 10px;">Internet de via rádio com velocidade de<strong>500MB/s</strong></p>
+                    <p style="color: #030303; margin-top: 10px;">Internet fibra óptica com velocidade de<strong>600MB/s</strong></p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
@@ -168,7 +172,7 @@
             <div class="col-md-4 col-sm-6">
                 <div>
                     <i class="bi bi-cup-straw fs-1 icon-style"></i>
-                    <p style="color: #030303; margin-top: 10px;">Cooktop e forno à gás, microondas, refrigerador com freezer e adega de vinho</p>
+                    <p style="color: #030303; margin-top: 10px;">Cooktop e forno elétrico, microondas, refrigerador com freezer e adega de vinho</p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
@@ -180,13 +184,13 @@
             <div class="col-md-4 col-sm-6">
                 <div>
                     <i class="bi bi-brightness-alt-high fs-1 icon-style"></i>
-                    <p style="color: #030303; margin-top: 10px;">Iluminação da suíte e persianas automatizadas via Alexa</p>
+                    <p style="color: #030303; margin-top: 10px;">Iluminação, persiana, TV e ar condicionado automatizado por Comando de voz.</p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
                 <div>
                     <i class="bi bi-speaker fs-1 icon-style"></i>
-                    <p style="color: #030303; margin-top: 10px;">Sistema de som via Alexa no quarto</p>
+                    <p style="color: #030303; margin-top: 10px;">Sistema de som com Alexa integrada.</p>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
@@ -266,7 +270,7 @@
                 <div class="card shadow-lg border-0 h-100" style="border-radius: 20px; overflow: hidden; background-color: #fff;">
                     <div class="card-body">
                         <h5 class="card-title d-flex align-items-center" style="color: #6c7b58;">
-                            <i class="bi bi-calendar-week me-2"></i> Dia de Semana
+                            <i class="bi bi-calendar-week me-2"></i> De domingo á quinta
                         </h5>
                         <p><strong>R$690,00</strong> - Diária p/ 2 pessoas</p>
                         <a href="https://wa.me/48996777239?text=Olá,%20estou%20interessado%20em%20uma%20hospedagem.%20Poderia%20me%20passar%20mais%20informações?" class="btn btn-success w-100">RESERVAR AGORA</a>
@@ -279,7 +283,7 @@
                 <div class="card shadow-lg border-0 h-100" style="border-radius: 20px; overflow: hidden; background-color: #fff;">
                     <div class="card-body">
                         <h5 class="card-title d-flex align-items-center" style="color: #6c7b58;">
-                            <i class="bi bi-calendar-week me-2"></i> Final de semana
+                            <i class="bi bi-calendar-week me-2"></i> Sexta e sábado
                         </h5>
                         <p><strong>R$790,00</strong> - Diária p/ 2 pessoas</p>
                         <a href="https://wa.me/48996777239?text=Olá,%20estou%20interessado%20em%20uma%20hospedagem.%20Poderia%20me%20passar%20mais%20informações?" class="btn btn-success w-100">RESERVAR AGORA</a>
@@ -296,7 +300,7 @@
     <p>Consulte a disponibilidade da Cabana pelo nosso WhatsApp oficial clicando <a href="https://wa.me/48996777239?text=Olá,%20estou%20interessado%20em%20uma%20hospedagem.%20Poderia%20me%20passar%20mais%20informações?">aqui</a>.</p>
 
     <h3 style="color: #85927d; font-size: 2rem;">Pagamento <i class="bi bi-credit-card" style="color: #85927d;"></i></h3>
-<p>Pagamento mediante 50% na efetivação da reserva e 50% até 7 dias antes do check-in. Parcelamento disponível no cartão em até 12x com acréscimo, via Mercado Pago.</p>
+<p>50% na efetivação da reserva e 50% até 7 dias antes do check-in. Parcelamento disponível no cartão em até 12x com acréscimo, via Mercado Pago.</p>
 
 
     <h3 style="color: #85927d; font-size: 2rem;">Horários <i class="bi bi-clock" style="color: #85927d;"></i></h3>
@@ -319,7 +323,7 @@
                 <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#faqAccordion">
                     <div class="accordion-body">
                         Nossa Cabana fica na cidade de Santo Amaro da imperatriz no
-                        Litoral de Catarinense, a 30km de Florianópolis. A Cabana está localizada a apenas 7km do centro da cidade.
+                        Litoral de Santa Catarina, a 30km de Florianópolis. A Cabana está localizada a apenas 7km do centro da cidade.
                     </div>
                 </div>
             </div>
@@ -389,7 +393,7 @@
                 </h2>
                 <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#faqAccordion">
                     <div class="accordion-body">
-                        Trabalhamos dentro do modelo de locação por temporada, estilo Airbnb, dessa forma não possuímos alimentação inclusa. Nossa Cabana é totalmente equipada com cooktop, forno, microondas, churrasqueira e geladeira e todos os utensílios necessários para que os hóspedes preparem suas refeições. Inclusive sempre fornecemos sal, açúcar, café em pó e café em cápsula.
+                        Trabalhamos dentro do modelo de locação por temporada, estilo Airbnb, dessa forma não possuímos alimentação inclusa. Nossa Cabana é totalmente equipada com cooktop, forno, microondas, churrasqueira, geladeira e todos os utensílios necessários para que os hóspedes preparem suas refeições. Inclusive sempre fornecemos sal, açúcar, café em pó e café em cápsula.
                     </div>
                 </div>
             </div>
