correçao ortografia foma de pagamento sessao e perguntas frequentes

--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
                 <img src="./imagem/carousel2.JPG" class="d-block w-100" alt="Imagem 2">
             </div>
             <div class="carousel-item">
-                <img src="./imagem/carousel3.JPG" class="d-block w-100" alt="Imagem 2">
+                <img src="./imagem/carousel3.JPG" class="d-block w-100" alt="Imagem 3">
             </div>
             <div class="carousel-item">
-                <img src="./imagem/carousel4.JPG" class="d-block w-100" alt="Imagem 2">
+                <img src="./imagem/carousel4.JPG" class="d-block w-100" alt="Imagem 4">
             </div>
             <div class="carousel-item">
-                <img src="./imagem/carousel5.JPG" class="d-block w-100" alt="Imagem 2">
+                <img src="./imagem/carousel5.JPG" class="d-block w-100" alt="Imagem 5">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -477,7 +477,7 @@
                 </h2>
                 <div id="collapseTwelve" class="accordion-collapse collapse" aria-labelledby="headingTwelve" data-bs-parent="#faqAccordion">
                     <div class="accordion-body">
-                        O cancelamento da reserva só poderá acontecer em até 7 dias após a contratação da hospedagem para o reembolso integral do valor pago. Caso o cancelamento ocorra após 7 dias da contratação, será retido 100% do valor pago. Caso o hóspede esteja apto ao reembolso e que haja saldo positivo a ser reembolsado, este será realizado em até 10 dias úteis após a solicitação do hóspede.
+                        O cancelamento da reserva só poderá acontecer em até 7 dias após a contratação da hospedagem para o reembolso integral do valor pago. Para cancelamento após os 7  dias da contratação, será retido 100% do valor pago. Caso o hóspede esteja apto ao reembolso e que haja saldo positivo a ser reembolsado, este será realizado em até 10 dias úteis após a solicitação do hóspede.
                     </div>
                 </div>
             </div>
