integraçao do airbnb

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 </div>
 </section>
 
-<section id="descubra" class="py-5" style="background-color: #f9f9f9;">
+<section id="descubra" class="py-5" style="background-color: rgba(133, 146, 125, 0.1);">
     <div class="container">
         <!-- Título Grande -->
         <h2 class="mb-4" style="font-size: 2.5rem; color: #6c7b58; font-weight: 700; text-align: left;">
@@ -313,6 +313,38 @@
         <p style="font-size: 1.1rem; color: #6c757d; line-height: 1.8;">
             Santo Amaro da Imperatriz é ideal para quem deseja relaxar, recarregar as energias e se desconectar da rotina agitada. Nossa cabana oferece o refúgio perfeito para aproveitar todo o charme e as belezas naturais desta região única.
         </p>
+    </div>
+</section>
+
+<section id="avaliacoes" class="py-5" style="background-color: #f9f9f9;">
+    <div class="container text-center">
+        <h2 class="mb-4" style="color: #6c7b58; font-weight: 700;">Avaliação 5 estrelas no Google</h2>
+
+        <!-- Estrelas -->
+        <div class="mb-4">
+            <i class="bi bi-star-fill" style="color: #ffcc00;"></i>
+            <i class="bi bi-star-fill" style="color: #ffcc00;"></i>
+            <i class="bi bi-star-fill" style="color: #ffcc00;"></i>
+            <i class="bi bi-star-fill" style="color: #ffcc00;"></i>
+            <i class="bi bi-star-fill" style="color: #ffcc00;"></i>
+        </div>
+
+        <!-- Contêiner responsivo para o vídeo -->
+        <div class="video-container mb-5">
+            <video controls>
+                <source src="./imagem/avaliaçoes.mp4" type="video/mp4">
+                <source src="./imagem/avaliações.webm" type="video/webm">
+                <source src="./imagem/avaliações.ogv" type="video/ogg">
+                Seu navegador não suporta este vídeo.
+            </video>
+        </div>
+
+        <!-- Botão para ver avaliações -->
+        <div class="mb-4">
+            <a href="https://maps.app.goo.gl/VdHnmYTQZ8SvDQTH7" class="btn btn-primary" style="background-color: #6c7b58; border-color: #6c7b58;">
+                Ver Avaliações
+            </a>
+        </div>
     </div>
 </section>
 
@@ -350,6 +382,8 @@
         </div>
     </div>
 </section>
+
+<div class="airbnb-embed-frame" data-id="1269122600830270563" data-view="home" data-hide-price="true" style="width: 450px; height: 300px; margin: auto;"><a href="https://www.airbnb.com.br/rooms/1269122600830270563?guests=1&amp;adults=1&amp;s=66&amp;source=embed_widget">Ver no Airbnb</a><a href="https://www.airbnb.com.br/rooms/1269122600830270563?guests=1&amp;adults=1&amp;s=66&amp;source=embed_widget" rel="nofollow">Rancho · Santo Amaro da Imperatriz · 1 quarto · 1 cama · 2 banheiros</a><script async="" src="https://www.airbnb.com.br/embeddable/airbnb_jssdk"></script></div>
 
 <!-- Informações Adicionais -->
 <div class="text-center mt-5">
@@ -538,39 +572,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-</section>
-
-
-<section id="avaliacoes" class="py-5" style="background-color: #f9f9f9;">
-    <div class="container text-center">
-        <h2 class="mb-4" style="color: #6c7b58; font-weight: 700;">Avaliação 5 estrelas no Google</h2>
-
-        <!-- Estrelas -->
-        <div class="mb-4">
-            <i class="bi bi-star-fill" style="color: #ffcc00;"></i>
-            <i class="bi bi-star-fill" style="color: #ffcc00;"></i>
-            <i class="bi bi-star-fill" style="color: #ffcc00;"></i>
-            <i class="bi bi-star-fill" style="color: #ffcc00;"></i>
-            <i class="bi bi-star-fill" style="color: #ffcc00;"></i>
-        </div>
-
-        <!-- Contêiner responsivo para o vídeo -->
-        <div class="video-container mb-5">
-            <video controls>
-                <source src="./imagem/avaliaçoes.mp4" type="video/mp4">
-                <source src="./imagem/avaliações.webm" type="video/webm">
-                <source src="./imagem/avaliações.ogv" type="video/ogg">
-                Seu navegador não suporta este vídeo.
-            </video>
-        </div>
-
-        <!-- Botão para ver avaliações -->
-        <div class="mb-4">
-            <a href="https://maps.app.goo.gl/VdHnmYTQZ8SvDQTH7" class="btn btn-primary" style="background-color: #6c7b58; border-color: #6c7b58;">
-                Ver Avaliações
-            </a>
         </div>
     </div>
 </section>
