--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 
         <!-- Botão para ver avaliações -->
         <div class="mb-4">
-            <a href="https://maps.app.goo.gl/VdHnmYTQZ8SvDQTH7" class="btn btn-primary" style="background-color: #6c7b58; border-color: #6c7b58;">
+            <a href="https://maps.app.goo.gl/qaoV6AYGBLFRWCWS7" class="btn btn-primary" style="background-color: #6c7b58; border-color: #6c7b58;">
                 Ver Avaliações
             </a>
         </div>
@@ -361,7 +361,7 @@
                         <h5 class="card-title d-flex align-items-center" style="color: #6c7b58;">
                             <i class="bi bi-calendar-week me-2"></i> De domingo á quinta
                         </h5>
-                        <p><strong>R$690,00</strong> - Diária p/ 2 pessoas</p>
+                        <p><strong>R$690,00</strong><br> - Diária p/ 2 pessoas</p>
                         <a href="https://wa.me/48996777239?text=Olá,%20estou%20interessado%20em%20uma%20hospedagem.%20Poderia%20me%20passar%20mais%20informações?" class="btn btn-success w-100">RESERVAR AGORA</a>
                     </div>
                 </div>
@@ -374,7 +374,7 @@
                         <h5 class="card-title d-flex align-items-center" style="color: #6c7b58;">
                             <i class="bi bi-calendar-week me-2"></i> Sexta e sábado
                         </h5>
-                        <p><strong>R$790,00</strong> - Diária p/ 2 pessoas</p>
+                        <p><strong>R$790,00</strong><br> - Diária p/ 2 pessoas</p>
                         <a href="https://wa.me/48996777239?text=Olá,%20estou%20interessado%20em%20uma%20hospedagem.%20Poderia%20me%20passar%20mais%20informações?" class="btn btn-success w-100">RESERVAR AGORA</a>
                     </div>
                 </div>
