link integrado ao reserve agora

--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
                             <i class="bi bi-calendar-week me-2"></i> De domingo á quinta
                         </h5>
                         <p><strong>R$690,00</strong><br> - Diária p/ 2 pessoas</p>
-                        <a href="https://wa.me/48996777239?text=Olá,%20estou%20interessado%20em%20uma%20hospedagem.%20Poderia%20me%20passar%20mais%20informações?" class="btn btn-success w-100">RESERVAR AGORA</a>
+                        <a href="https://www.airbnb.com.br/rooms/1269122600830270563?guests=1&amp;adults=1&amp;s=66&amp;source=embed_widget" class="btn btn-success w-100">RESERVAR AGORA</a>
                     </div>
                 </div>
             </div>
@@ -375,15 +375,13 @@
                             <i class="bi bi-calendar-week me-2"></i> Sexta e sábado
                         </h5>
                         <p><strong>R$790,00</strong><br> - Diária p/ 2 pessoas</p>
-                        <a href="https://wa.me/48996777239?text=Olá,%20estou%20interessado%20em%20uma%20hospedagem.%20Poderia%20me%20passar%20mais%20informações?" class="btn btn-success w-100">RESERVAR AGORA</a>
+                        <a href="https://www.airbnb.com.br/rooms/1269122600830270563?guests=1&amp;adults=1&amp;s=66&amp;source=embed_widget" class="btn btn-success w-100">RESERVAR AGORA</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
-
-<div class="airbnb-embed-frame" data-id="1269122600830270563" data-view="home" data-hide-price="true" style="width: 450px; height: 300px; margin: auto;"><a href="https://www.airbnb.com.br/rooms/1269122600830270563?guests=1&amp;adults=1&amp;s=66&amp;source=embed_widget">Ver no Airbnb</a><a href="https://www.airbnb.com.br/rooms/1269122600830270563?guests=1&amp;adults=1&amp;s=66&amp;source=embed_widget" rel="nofollow">Rancho · Santo Amaro da Imperatriz · 1 quarto · 1 cama · 2 banheiros</a><script async="" src="https://www.airbnb.com.br/embeddable/airbnb_jssdk"></script></div>
 
 <!-- Informações Adicionais -->
 <div class="text-center mt-5">
